--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 #mycard{
   padding: 10px;
   height: 170px;
-  background-color: #faebd73b;
+  background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .margin-top-base{
@@ -10,9 +10,40 @@
 .margin-bottom-base{
   margin-bottom: 16px;
 }
+.margin-left-base{
+  margin-left: 16px;
+}
+.margin-right-base{
+  margin-right: 16px;
+}
 .padding-base{
   padding: 16px;
 }
 .border-1p{
   border:1px solid #ffb9b9;
+}
+.ovflow-y
+{
+  overflow-x: hidden;
+}
+.login{
+  height: 100%;
+  margin-top: 8%;
+  border: 1px solid rgb(3, 104, 3);
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+
+}
+.login .log-head{
+  color: #fff;
+  background-color: #000099;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+.error{
+  color: red;
+  font-weight: 400;
+}
+.container{
+  background-color:rgb(255, 248, 240) !important;
 }
