--- a/css/main.css
+++ b/css/main.css
@@ -56,3 +56,15 @@ body{
   background-color:#fff;
   border-radius: 10%;
 }
+@media only screen and (max-width: 576px) {
+  #clgname {
+    font-size: 1em ;
+    font-weight: bolder;
+    color: #7e1010;
+  }
+}
+@media only screen and (max-width: 576px) {
+  #btnlog {
+    float: right;
+  }
+}
