--- a/css/Bootstrap.css
+++ b/css/Bootstrap.css
@@ -362,7 +362,9 @@ tr {
 }
 
 label {
-    display: inline-block
+    display: inline-block;
+    color: #6D00B2 !important;
+    font-weight: bold !important;
 }
 
 button {
@@ -2235,7 +2237,9 @@ progress {
 }
 
 .form-label {
-    margin-bottom: .5rem
+    margin-bottom: .5rem;
+    color: #6D00B2 !important;
+    font-weight: bold !important;
 }
 
 .col-form-label {
