--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
 }
 .margin-top-base{
   margin-top: 16px;
+ 
 }
 .margin-bottom-base{
   margin-bottom: 16px;
@@ -18,6 +19,10 @@
 }
 .padding-base{
   padding: 16px;
+}
+.padding-top-base
+{
+  padding-top: 10px;
 }
 .border-1p{
   border:1px solid #ffb9b9;
@@ -49,8 +54,13 @@
   font-weight: 400;
 }
 body{
-  background-color:rgb(255, 248, 240) !important;
-  font-family: 'Poppins', sans-serif;
+ 
+  font-family: "Poppins" !important;
+}
+#clgname {
+  font-size: 22px;
+  margin-top: 13px;
+
 }
 #timedash
 {
@@ -62,13 +72,39 @@ body{
 }
 @media only screen and (max-width: 576px) {
   #clgname {
-    font-size: 1em ;
-    font-weight: bolder;
-    color: #7e1010;
+    font-size: 22px;
+    margin-top: 13px;
+
   }
 }
 @media only screen and (max-width: 576px) {
   #btnlog {
     float: right;
   }
+}
+#headerUser{
+  text-align: center;
+  margin-top: 11px;
+  font-weight: 600;
+}
+#header{
+  background-color:#0b5ed7 !important; 
+  color:#fff;
+}
+
+/* customise jquery Search Box */
+.dataTables_wrapper .dataTables_filter input {
+  margin-left: 0.5em;
+  width: 163px;
+  height: 24px;
+  border: none;
+  border-radius: 3px;
+}
+
+select {
+  word-wrap: normal;
+  /* padding: 0px 0px; */
+  border: none;
+  width: 46px;
+  border-radius: 3px;
 }
